--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 Mermeladas
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Fresa</a>
-                <a class="dropdown-item" href="#">Naranja</a>
-                <a class="dropdown-item" href="#">Manzana y Pera</a>
-                <a class="dropdown-item" href="#">Jalapeño</a>
+                <a class="dropdown-item btnNoStyle2" href="#">Fresa</a>
+                <a class="dropdown-item btnNoStyle2" href="#">Naranja</a>
+                <a class="dropdown-item btnNoStyle2" href="#">Manzana y Pera</a>
+                <a class="dropdown-item btnNoStyle2" href="#">Jalapeño</a>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -53,7 +53,7 @@
                 Pan de Jamon
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Coming Soon</a>
+                <a class="dropdown-item btnNoStyle2" href="#">Coming Soon</a>
               </div>
             </li>
             <li class="nav-item">
@@ -1669,10 +1669,12 @@
     </section> 
 
     <footer id="footer">
-      <div class="intro">
+      <div class="intro ">
       </div>
+      <div class="center">
 
-      <div class="gb">
+      </div>
+      <div class="gb container ">
 
       </div>
     </footer>
