--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="SoyGlucosa Glucosa Salud natural BuenosAires Argentina Mermeladas Fresa Naranja Manzana">
     <meta name="author" content="Emilio Martinez">
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -36,31 +36,39 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle colorBrown" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                 Mermeladas
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item btnNoStyle2" href="#">Fresa</a>
-                <a class="dropdown-item btnNoStyle2" href="#">Naranja</a>
-                <a class="dropdown-item btnNoStyle2" href="#">Manzana y Pera</a>
-                <a class="dropdown-item btnNoStyle2" href="#">Jalapeño</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Fresa</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Naranja</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Manzana y Pera</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Jalapeño</a>
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle colorBrown" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                 Pan de Jamon
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item btnNoStyle2" href="#">Coming Soon</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Estandar</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">De Hojaldre y Queso Crema</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle colorBrown" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                Golfeados
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Caramelizado</a>
+                <a class="dropdown-item btnNoStyle2 colorBrown" href="#">Golfeado con Queso</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Golfeados</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sobre nosotros</a>
+              <a class="nav-link colorBrown" href="#">Sobre nosotros</a>
             </li>
           </ul>
           <div class="ml-auto">
@@ -1107,6 +1115,7 @@
       </div>
       </div>
     </section>
+    <hr class="separador">
 
     <!--introImg-->
     <section class="productImg" id="">
@@ -1415,6 +1424,7 @@
 
     </section>
     <!--introImg-->
+    <hr class="separador">
     <section class="productImg"> 
       <img src="imagenes/todos2.png" alt="Mermeladas">
     </section>
@@ -1544,6 +1554,7 @@
       </div>  
 
     </section>
+    <hr class="separador">
     <section class="productImg"> 
       <img src="imagenes/todos3.png" alt="Golfeados">
     </section>
@@ -1671,11 +1682,55 @@
     <footer id="footer">
       <div class="intro ">
       </div>
-      <div class="center">
-
+      <div class="center colorBrown2">
+        <div class="container container2" style="padding: 20px 0px 0px 0px;">
+          <div class="row">
+            <div class="col-md-4 col-md-4 d-flex justify-content-center align-items-end">
+              <h6>SoyGlucosaProject</h6>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center align-items-end">
+              <h4>Contacto</h4>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center align-items-end">
+              <!-- <img src="imagenes/jm.jpg" alt="Avatar" style="width:200px"> -->
+              <h4>Sobre Nosotros</h4>
+            </div>
+          </div>
+         <hr style="background-color: rgb(221, 140, 221);">
+          <div class="row">
+            <div class="col-md-4 d-flex justify-content-center">
+              <p style="text-align: center;"><a href="https://github.com/emmartinez29/soyGlucosaProject" target="_blank"><i class="fa fa-github colorIcon"></i></a> GitHub</p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-start flex-column ">
+              <p style="text-align: center;"><a href="#" target="_blank" class="prevent"><i class="fa fa-phone colorIcon"></i></a> 11-11123331</p>
+              <p style="text-align: center;"><a href="#" target="_blank" class="prevent"><i class="fa fa-envelope-o colorIcon"></i></a> comingSoon@example.com</p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit culpa cumque facilis nulla, eum accusamus magni animi doloremque alias distinctio molestiae quaerat vero libero aliquid, nostrum commodi quia cupiditate sapiente.</p>
+            </div>
+          </div>
+        </div>
+        <div class="container container2" style="padding: 0px 0px 20px 0px;">
+          <div class="row d-flex justify-content-center">
+            <p>Siguenos en nuestras redes</p>
+          </div>
+          <div class="redes">
+            <div class="social-menu2">
+              <div class="social-menu22"><a href="https://www.instagram.com/soyglucosa/?igshid=1skr6orrocz5" target="_blank"><i class="fa fa-instagram"></i></a></div>
+              <!-- <div class="social-menu22"><a href="https://github.com/emmartinez29/RepoOne"><i class="fa fa-github"></i></a></div> -->
+              <div class="social-menu22"><a href="#" target="_blank" class="prevent"><i class="fa fa-facebook"></i></a></div>
+              <div class="social-menu22"><a href="#" target="_blank" class="prevent"><i class="fa fa-twitter"></i></a></div>
+          </div>
+          </div>
+        </div>
       </div>
-      <div class="gb container ">
+      <div class="gb  d-flex align-items-center">
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <p>© 2021 | Powered by <strong><a href="https://www.linkedin.com/in/emilio-martinez-gonzalez-0b0195165/" target="_blank">Emilio Martinez</a></strong></p>
+          </div>
 
+        </div>
       </div>
     </footer>
     <!-- Optional JavaScript -->
