--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                             <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
                         </td> -->
                         <td class="align-middle" style="width: 25%;">
-                          <div class="">
-                            <img class="col-md-6" src="imagenes/frutilla.png" alt="" style="border: 1px solid black;">
+                          <div class="borderImg">
+                            <img class="col-md-6" src="imagenes/frutilla.png" alt="">
                             <!-- <button class="test1 btn">x</button> -->
                           </div>
                         </td>
@@ -212,8 +212,8 @@
                             <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
                         </td> -->
                         <td class="align-middle" style="width: 25%;">
-                          <div class="">
-                            <img class="col-md-6" src="imagenes/manzana.png" alt="" style="border: 1px solid black;">
+                          <div class="borderImg">
+                            <img class="col-md-6" src="imagenes/manzana.png" alt="">
                             <!-- <button class="test1 btn">x</button> -->
                           </div>
                         </td>
@@ -270,8 +270,8 @@
                             <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
                         </td> -->
                         <td class="align-middle" style="width: 25%;">
-                          <div class="">
-                            <img class="col-md-6" src="imagenes/naranja.png" alt="" style="border: 1px solid black;">
+                          <div class="borderImg">
+                            <img class="col-md-6" src="imagenes/naranja.png" alt="" >
                             <!-- <button class="test1 btn">x</button> -->
                           </div>
                         </td>
@@ -320,8 +320,8 @@
                             <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
                         </td> -->
                         <td class="align-middle" style="width: 25%;">
-                          <div class="">
-                            <img class="col-md-6" src="imagenes/pandejamon.png" alt="" style="border: 1px solid black;">
+                          <div class="borderImg">
+                            <img class="col-md-6" src="imagenes/pandejamon.png" alt="" >
                             <!-- <button class="test1 btn">x</button> -->
                           </div>
                         </td>
@@ -371,8 +371,8 @@
                             <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
                         </td> -->
                         <td class="align-middle" style="width: 25%;">
-                          <div class="">
-                            <img class="col-md-6" src="imagenes/golfeado1.png" alt="" style="border: 1px solid black;">
+                          <div class="borderImg">
+                            <img class="col-md-6" src="imagenes/golfeado1.png" alt="" >
                             <!-- <button class="test1 btn">x</button> -->
                           </div>
                         </td>
@@ -429,8 +429,8 @@
                             <img class="card-img-top" src="imagenes/frutilla.png"alt="Card image cap"></label>
                         </td> -->
                         <td class="align-middle" style="width: 25%;">
-                          <div class="">
-                            <img class="col-md-6" src="imagenes/golfeado2.png" alt="" style="border: 1px solid black;">
+                          <div class="borderImg">
+                            <img class="col-md-6" src="imagenes/golfeado2.png" alt="" >
                             <!-- <button class="test1 btn">x</button> -->
                           </div>
                         </td>
@@ -550,7 +550,7 @@
                         <tbody>
                           <tr class="disappear1" style="height: 100px;">
                             <td class="column-1 align-middle">
-                              <div class="d-flex justify-content-left align-items-center">
+                              <div class="d-flex justify-content-left align-items-center borderImg2">
                                 <img class="" src="imagenes/frutilla.png" alt="">
                                 <!-- <button class="test1 btn">x</button> -->
                                 <!-- <button type="button" class="test1 btn btn-warning">Eliminar</button> -->
@@ -622,7 +622,7 @@
                           </tr>
                           <tr class="disappear2" style="height: 100px;">
                             <td class="column-1 align-middle">
-                              <div class="d-flex justify-content-left align-items-center">
+                              <div class="d-flex justify-content-left align-items-center borderImg2">
                                 <img class="" src="imagenes/manzana.png" alt="">
                                 <!-- <button class="test2">x</button> -->
                                 <!-- <button type="button" class="test2 btn btn-warning">Eliminar</button> -->
@@ -681,7 +681,7 @@
                           </tr>
                           <tr class="disappear3" style="height: 100px;">
                             <td class="column-1 align-middle">
-                              <div class="d-flex justify-content-left align-items-center">
+                              <div class="d-flex justify-content-left align-items-center borderImg2">
                                 <img class="" src="imagenes/naranja.png" alt="">
                                 <div class="trashC">
                                   <div>
@@ -739,7 +739,7 @@
                           <!-- new product -->
                           <tr class="disappear6" style="height: 100px;">
                             <td class="column-1 align-middle">
-                              <div class="d-flex justify-content-left align-items-center">
+                              <div class="d-flex justify-content-left align-items-center borderImg2">
                                 <img class="" src="imagenes/pandejamon.png" alt="">
                                 <div class="trashC">
                                   <div>
@@ -797,7 +797,7 @@
 
                           <tr class="disappear4" style="height: 100px;">
                             <td class="column-1 align-middle">
-                              <div class="d-flex justify-content-left align-items-center">
+                              <div class="d-flex justify-content-left align-items-center borderImg2">
                                 <img class="" src="imagenes/golfeado1.png" alt="">
                                 <!-- <button class="test1 btn">x</button> -->
                                 <!-- <button type="button" class="test1 btn btn-warning">Eliminar</button> -->
@@ -869,7 +869,7 @@
                           </tr>
                           <tr class="disappear5" style="height: 100px;">
                             <td class="column-1 align-middle">
-                              <div class="d-flex justify-content-left align-items-center">
+                              <div class="d-flex justify-content-left align-items-center borderImg2">
                                 <img class="" src="imagenes/golfeado2.png" alt="">
                                 <!-- <button class="test2">x</button> -->
                                 <!-- <button type="button" class="test2 btn btn-warning">Eliminar</button> -->
@@ -1027,8 +1027,9 @@
             </div>
             <div class="modal-footer bordeC">
               <button type="button" class="btn borderB" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn borderC carNot saint-button2 carFull"
-                data-dismiss="modal">Comprar</button>
+              <!-- <button type="button" class="btn borderC carNot saint-button2 carFull"
+                data-dismiss="modal" href="react.html"><a class="" href="react.html">Version Landing</a></button> -->
+                <a href="react.html" class="btn borderC carNot saint-button2 carFull">Comprar</a>
             </div>
             <!-- <div class="modal-footer">
             <div class="container">
@@ -1559,8 +1560,7 @@
       <img src="imagenes/todos3.png" alt="Golfeados">
     </section>
     <section class="productos" id="">
-      <div class="container">
-        <div class="container col-md-6" style="">
+      <div class="container col-md-6">
           <div class="row">
             <div class="col-md-6">
               <div class="d-flex justify-content-center">
@@ -1675,7 +1675,6 @@
               </div>
             </div>
           </div>
-        </div>
       </div> 
     </section> 
 
