--- a/index.html
+++ b/index.html
@@ -1682,7 +1682,7 @@
       <div class="intro ">
       </div>
       <div class="center colorBrown2">
-        <div class="container container2" style="padding: 20px 0px 0px 0px;">
+        <div class="container container2 col-md-6" style="padding: 20px 0px 0px 0px;">
           <div class="row">
             <div class="col-md-4 col-md-4 d-flex justify-content-center align-items-end">
               <h6>SoyGlucosaProject</h6>
